--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,23 @@
-version: '3.8'
+version: '3.9'
 
 services:
   flask:
+    command: bash -c 'flask db init && flask db migrate -m "aval" &&  flask db upgrade && python app.py'
     restart: always
     build: .
-  
-      # volumes:
-      # - ./blog:/app
+    image: blog:v3
+      #volumes:
+      # - ./flask-app:/app
     ports:
       - 5000:5000
 
     environment:
       - DB_URL=postgresql://postgres:postgres@postgres_db:5432/postgres
 
+
     tty: true
+    networks:
+      - asgard
     depends_on:
       - postgres_db 
 
@@ -30,4 +34,10 @@ services:
       - POSTGRES_DB=postgres
 
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./db:/var/lib/postgresql/data
+    networks:
+      - asgard
+
+networks:
+  asgard:
+    driver: bridge  
